<resources>
    <string name="app_name">Twi Keyboard</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="explain">This is an updated version of Ka Twi Keyboard, the application allows users to type or chat in the Twi language. This version of Twi keyboard contains a display screen that allows the user to navigate to the device\'s settings.
        In order to use the keyboard, click on the settings icon from the toolbar, and enable the \'Twi Keyboard\', or you can go to the settings of the device and enable the keyboard.</string>

    <string name="toolbar_settings_header">ACTIVATING THE KEYBOARD 1</string>

    <string name="tool_bar_1">1) Click on the Settings icon from the Toolbar</string>
    <string name="tool_bar_2">2) Language and input screen opens</string>
    <string name="tool_bar_3">3) Click on the toggle button next to the Twi Keyboard to enable it</string>

    <string name="about_text">ACTIVATING THE KEYBOARD 2</string>

    <string name="instruction">1) Go to the settings of the device</string>
    <string name="instruction1">2) Click on Language and input</string>
    <string name="instruction2">3) Click on Keyboard and input methods</string>
    <string name="instruction3">4) A message dialog will show up on the screen that shows, CHANGE ON-SCREEN KEYBOARD.</string>
    <string name="instruction4">5) Select Twi Keyboard. If it does not show, click on MORE KEYBOARDS and the keyboard name will appear.</string>
    <string name="terms_title">USAGE AGREEMENT</string>
    <string name="gdpr_terms">Frantronics Development is a startup Mobile Applications Development Company.
    Please note, by downloading and using this application you are aware that your private information or device information will not be collected.
    </string>


    <string name="frantronics">Frantronics Development</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
